<resources>
    <string name="app_name">Booking</string>
    <string name="app_name_staging">Booking Staging</string>
    <string name="app_one_liner">Book Your Place !</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_booking_details">Upcoming Booking</string>
    <string name="menu_about">About</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="map_api_key">AIzaSyC2G1fZQLib1hlTg-r31cLdB16IZG5SaVI</string>
    <string name="enter_valid_name">Enter Valid Name</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_valid_password">Enter Valid Password</string>
    <string name="enter_valid_phone_number">Enter Valid Phone Number</string>
    <string name="enter_valid_rent">Enter Valid Rent</string>
    <string name="user">User</string>
    <string name="create_new_account_label">Create New Account</string>
    <string name="user_note">I want to use app</string>
    <string name="owner">Owner</string>
    <string name="owner_note">I want to manage or add my place</string>
    <string name="login">Login</string>
    <string name="already_have_account_label">Already Have Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or">or</string>
    <string name="create_new_account">Create new account ?</string>
    <string name="google">Google</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="email_hint">Booking@gmail.com</string>
    <string name="password_hint">#123BookingTest</string>
    <string name="signup">Signup</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_user_phone_number">Enter Phone Number</string>
    <string name="phone_number_hint">8879960346</string>
    <string name="user_name_hint">Jay</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="reset_password_info">Enter Valid Email, You will get mail for reset password, Thank You.</string>
    <string name="email_sent_success_message">"Email Sent Successfully, Check Your mail !"</string>
    <string name="error_privacy_policy">Please Agree privacy policy</string>
    <string name="action_logout">Logout</string>
    <string name="add_your_place_details">Add Your Place Details</string>
    <string name="add_your_place_rent">Add Your Place Rent</string>
    <string name="place_details">Place Details</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="add_location">Add Location</string>
    <string name="add_your_place">Add Your place</string>
    <string name="owner_place_name">Owner Place Name</string>
    <string name="owner_place_name_hint">Ganesh Ground</string>
    <string name="latitude_hint">XX.XXXXXXX</string>
    <string name="longitude_hint">XX.XXXXXXX</string>
    <string name="enter_place_name">Enter Place Name</string>
    <string name="hint_enter_place_name">Ganesh Ground</string>
    <string name="error_enter_place_name">Enter Valid Place Name</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="hint_enter_pincode">123456</string>
    <string name="error_enter_pincode">Enter Valid Pincode</string>
    <string name="enter_country_state_district">Country, State, District</string>
    <string name="error_state_city_district">Enter Valid State, City, District</string>
    <string name="hint_state_city_district">India, Gujarat, Surat</string>
    <string name="enter_address">Enter Place Address</string>
    <string name="hint_enter_address">A/202, Vashi Plaza, Near Gopi talav</string>
    <string name="error_enter_address">Enter Valid Place Address</string>
    <string name="enter_total_nets_Available">Enter Total Nets available</string>
    <string name="hint_enter_total_nets_Available">2</string>
    <string name="error_enter_total_nets_Available">Enter Valid Total Nets Available</string>
    <string name="enter_ground_staff_number">Enter Ground Staff Number</string>
    <string name="hint_enter_ground_staff_number">8879912345</string>
    <string name="error_enter_ground_staff_number">Enter Valid Staff Number</string>
    <string name="enter_place_opening_time">Enter Place Opening Time</string>
    <string name="hint_enter_place_opening_time">07 : 00 AM</string>
    <string name="error_enter_place_opening_time">Enter Valid Place Opening Time</string>
    <string name="enter_place_close_time">Enter Place Closing Time</string>
    <string name="hint_enter_place_close_time">00 : 00 AM</string>
    <string name="error_enter_place_close_time">Enter Valid Place Closing Time</string>
    <string name="enter_place_default_per_hour_rent">Enter Place Per Hour Rent</string>
    <string name="hint_enter_place_default_per_hour_rent">1000</string>
    <string name="error_enter_place_default_per_hour_rent">Enter Valid Place Per Hour Rent</string>
    <string name="change_rent_day_and_time_wise">Change Rent Day/Time Wise ?</string>
    <string name="slot_12A_01A">12 AM - 01 AM</string>
    <string name="hint_slot_12A_01A">1000</string>
    <string name="slot_01A_02A">01 AM - 02 AM</string>
    <string name="hint_slot_01A_02A">1000</string>
    <string name="slot_02A_03P">02 AM - 03 AM</string>
    <string name="hint_slot_02A_03P">1000</string>
    <string name="slot_03A_04A">03 AM - 04 AM</string>
    <string name="hint_slot_03A_04A">1000</string>
    <string name="slot_04A_05A">04 AM - 05 AM</string>
    <string name="hint_slot_04A_05A">1000</string>
    <string name="slot_05A_06A">05 AM - 06 AM</string>
    <string name="hint_slot_05A_06A">1000</string>
    <string name="slot_06A_07A">06 AM - 07 AM</string>
    <string name="hint_slot_06A_07A">1000</string>
    <string name="slot_07A_08A">07 AM - 08 AM</string>
    <string name="hint_slot_07A_08A">1000</string>
    <string name="slot_08A_09A">08 AM - 09 AM</string>
    <string name="hint_slot_08A_09A">1000</string>
    <string name="slot_09A_10A">09 AM - 10 AM</string>
    <string name="hint_slot_09A_10A">1000</string>
    <string name="slot_10A_11A">10 AM - 11 AM</string>
    <string name="hint_slot_10A_11A">1000</string>
    <string name="slot_11A_12P">11 AM - 12 PM</string>
    <string name="hint_slot_11A_12P">1000</string>
    <string name="slot_12P_01P">12 PM - 01 PM</string>
    <string name="hint_slot_12P_01P">1000</string>
    <string name="slot_01P_02P">01 PM - 02 PM</string>
    <string name="hint_slot_01P_02P">1000</string>
    <string name="slot_02P_03P">02 PM - 03 PM</string>
    <string name="hint_slot_02P_03P">1000</string>
    <string name="slot_03P_04P">03 PM - 04 PM</string>
    <string name="hint_slot_03P_04P">1000</string>
    <string name="slot_04P_05P">04 PM - 05 PM</string>
    <string name="hint_slot_04P_05P">1000</string>
    <string name="slot_05P_06P">05 PM - 06 PM</string>
    <string name="hint_slot_05P_06P">1000</string>
    <string name="slot_06P_07P">06 PM - 07 PM</string>
    <string name="hint_slot_06P_07P">1000</string>
    <string name="slot_07P_08P">07 PM - 08 PM</string>
    <string name="hint_slot_06P_08P">1000</string>
    <string name="slot_08P_09P">08 PM - 09 PM</string>
    <string name="hint_slot_08P_09P">1000</string>
    <string name="slot_09P_10P">09 PM - 10 PM</string>
    <string name="hint_slot_09P_10P">1000</string>
    <string name="slot_10P_11P">10 PM - 11 PM</string>
    <string name="hint_slot_10P_11P">1000</string>
    <string name="slot_11P_12A">11 PM - 12 AM</string>
    <string name="hint_slot_11P_12A">1000</string>
    <string name="btn_add_place_rent">Add Place Rent</string>
    <string name="select_unselect_days_to_set_rent_seperatly">Select or Unselect Days option to set individual rent</string>
    <string name="selected_Days">Selected Days : </string>
    <string name="set_all_day_same_rent">Set All Day Same Rent</string>
    <string name="monday">Mon</string>
    <string name="empty_monday">Empty monday data</string>
    <string name="tuesday">Tue</string>
    <string name="empty_tuesday">Empty tuesday data</string>
    <string name="wednesday">Wed</string>
    <string name="empty_wednesday">Empty wednesday data</string>
    <string name="thursday">Thu</string>
    <string name="empty_thursday">Empty thursday data</string>
    <string name="friday">Fri</string>
    <string name="empty_friday">Empty friday data</string>
    <string name="saturday">Sat</string>
    <string name="empty_saturday">Empty saturday data</string>
    <string name="sunday">Sun</string>
    <string name="empty_sunday">Empty sunday data</string>
    <string name="change_day">Change Day</string>
    <string name="all_day_same_rent">All day same rent</string>
    <string name="review_all">Review All</string>
    <string name="check_your_all_rent">Check Your All Rent</string>
    <string name="default_rent_for_all_days">Default Rent For All Days</string>
    <string name="add_all_day_rent">Add All Day Same Rent</string>
    <string name="save_mon_rent">Add Mon Rent</string>
    <string name="save_tue_rent">Add Tue Rent</string>
    <string name="save_wed_rent">Add Wed Rent</string>
    <string name="save_thu_rent">Add Thu Rent</string>
    <string name="save_fri_rent">Add Fri Rent</string>
    <string name="save_sat_rent">Add Sat Rent</string>
    <string name="save_sun_rent">Add Sun Rent</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="save_all_day_rent">Save All Day Rent</string>
    <string name="save_monday_rent">Save Monday Rent</string>
    <string name="save_tuesday_rent">Save Tuesday Rent</string>
    <string name="save_wednesday_rent">Save Wednesday Rent</string>
    <string name="save_thursday_rent">Save Thursday Rent</string>
    <string name="save_friday_rent">Save Friday Rent</string>
    <string name="save_saturday_rent">Save Saturday Rent</string>
    <string name="save_sunday_rent">Save Sunday Rent</string>
    <string name="place_name">Place Name</string>
    <string name="place_address">Address</string>
    <string name="available">Available</string>
    <string name="booked">Booked</string>
    <string name="book">Book</string>
    <string name="price">Price</string>
    <string name="date_in_word">Date : </string>
    <string name="date">01 May 23</string>
    <string name="booking_review">Booking Review</string>
    <string name="payment">Payment</string>
    <string name="cancel">Cancel</string>
    <string name="selected_time_slot">Selected Time Slots</string>
    <string name="total_bill">Total Bill</string>
    <string name="day">Day</string>
    <string name="upcoming">Upcoming</string>
    <string name="no_upcoming_booking">No Upcoming Bookings...</string>
    <string name="privacy_policy_link">https://bit.ly/3LP9UT7</string>
    <string name="app_version_code">APP VERSION CODE</string>
    <string name="app_name_label">APP NAME</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="permission_used">PERMISSION USED</string>
    <string name="permission_used_details">\n INTERNET,\n ACCESS_COARSE_LOCATION,\n ACCESS_FINE_LOCATION</string>
    <string name="oops">Oops !</string>
    <string name="no_internet">No Internet !</string>
    <string name="retry">Retry
    </string>
</resources>