<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<ScrollView
    android:id="@+id/sv_top_page"
    android:layout_alignParentTop="true"
    android:layout_above="@+id/btn_close_review_dialog"
android:layout_width="match_parent"
android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_monday_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@color/combo_background_blue"
                android:textSize="18sp"
                android:textColor="@color/combo_text_blue"
                android:text="@string/monday" />

            <TextView
                android:id="@+id/tv_monday_value_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="2dp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/combo_text_green"
                android:text="@string/empty_monday" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/grey_6"
            />

        <LinearLayout
            android:id="@+id/ll_tuesday_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@color/combo_background_blue"
                android:textSize="18sp"
                android:textColor="@color/combo_text_blue"
                android:text="@string/tuesday" />

            <TextView
                android:id="@+id/tv_tuesday_value_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:padding="2dp"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/combo_text_green"
                android:text="@string/empty_tuesday" />

        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/grey_6"
                />

            <LinearLayout
                android:id="@+id/ll_wednesday_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@color/combo_background_blue"
                    android:textSize="18sp"
                    android:textColor="@color/combo_text_blue"
                    android:text="@string/wednesday" />

                <TextView
                    android:id="@+id/tv_wednesday_value_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:padding="2dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/combo_text_green"
                    android:text="@string/empty_wednesday" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/grey_6"
                />

            <LinearLayout
                android:id="@+id/ll_thursday_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@color/combo_background_blue"
                    android:textSize="18sp"
                    android:textColor="@color/combo_text_blue"
                    android:text="@string/thursday" />

                <TextView
                    android:id="@+id/tv_thursday_value_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:padding="2dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/combo_text_green"
                    android:text="@string/empty_thursday" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/grey_6"
                />

            <LinearLayout
                android:id="@+id/ll_friday_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@color/combo_background_blue"
                    android:textSize="18sp"
                    android:textColor="@color/combo_text_blue"
                    android:text="@string/friday" />

                <TextView
                    android:id="@+id/tv_friday_value_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:padding="2dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/combo_text_green"
                    android:text="@string/empty_friday" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/grey_6"
                />

            <LinearLayout
                android:id="@+id/ll_saturday_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@color/combo_background_blue"
                    android:textSize="18sp"
                    android:textColor="@color/combo_text_blue"
                    android:text="@string/saturday" />

                <TextView
                    android:id="@+id/tv_saturday_value_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:padding="2dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/combo_text_green"
                    android:text="@string/empty_saturday" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/grey_6"
                />

            <LinearLayout
                android:id="@+id/ll_sunday_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@color/combo_background_blue"
                    android:textSize="18sp"
                    android:textColor="@color/combo_text_blue"
                    android:text="@string/sunday" />

                <TextView
                    android:id="@+id/tv_sunday_value_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:padding="2dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/combo_text_green"
                    android:text="@string/empty_sunday" />

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>



</ScrollView>

        <Button
            android:id="@+id/btn_close_review_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="@drawable/button_state_wise_styling"
            android:drawableEnd="@drawable/icon_right_corner_24"
            android:enabled="true"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
