<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/combo_text_blue"
    android:elevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="6dp"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/booking_review"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/combo_text_blue"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"/>



       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/combo_background_green"
            android:textColor="@color/combo_text_green"
            android:text="@string/selected_time_slot"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/combo_text_green"/>

        <TextView
            android:id="@+id/tv_booking_review_selected_time_Slots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/combo_text_blue"
            android:text="@string/selected_time_slot"
            android:textSize="18sp"/>
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:gravity="end"
                android:background="@color/combo_background_blue"
                android:textColor="@color/red"
                android:text="@string/total_bill"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/tv_booking_review_total_bill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:gravity="left"
                android:background="@color/combo_background_blue"
                android:textColor="@color/red"
                android:text="@string/price"
                android:textSize="20sp"/>

        </LinearLayout>


        </LinearLayout>


       </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center">

            <Button
                android:id="@+id/booking_review_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/booking_review_dialog_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/payment"/>

        </LinearLayout>
    </LinearLayout>



</androidx.cardview.widget.CardView>